<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegistBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentRegister">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolbarRegister"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="@string/Register" />

    <EditText
        android:id="@+id/InputEmail"
        android:layout_width="269dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToolbarRegister" />

    <EditText
        android:id="@+id/InputPass"
        android:layout_width="269dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputEmail" />

    <EditText
        android:id="@+id/InputName"
        android:layout_width="269dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPass" />

    <EditText
        android:id="@+id/InputNIM"
        android:layout_width="271dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nim"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputName" />

    <RadioGroup
        android:id="@+id/radioGroupStudent"
        android:layout_width="273dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputNIM">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/male"
            android:text="Male" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/InputAge"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupStudent" />

    <EditText
        android:id="@+id/InputAddress"
        android:layout_width="275dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputAge" />

    <Button
        android:id="@+id/RegistButton"
        android:layout_width="301dp"
        android:layout_height="58dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="Register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>