<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLecturer">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLecturer"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="@string/addlecturer" />

    <EditText
        android:id="@+id/LecturerName"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLecturer" />

    <RadioGroup
        android:id="@+id/RadioGroupLecturer"
        android:layout_width="326dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LecturerName">

        <RadioButton
            android:id="@+id/MaleLecturer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/male"
            android:text="Male" />

        <RadioButton
            android:id="@+id/FemaleLecturer"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Female" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/expertise"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupLecturer" />

    <Button
        android:id="@+id/AddLecturerBtn"
        android:layout_width="275dp"
        android:layout_height="64dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="236dp"
        android:text="Add Lecturer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

</androidx.constraintlayout.widget.ConstraintLayout>