<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginStudent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="@string/LoginStudent" />

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin" />

    <EditText
        android:id="@+id/LoginPass"
        android:layout_width="282dp"
        android:layout_height="57dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="239dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="256dp"
        android:text="Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPass" />
</androidx.constraintlayout.widget.ConstraintLayout>